Add users in index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,15 @@
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
 <ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
-</ul>
+    <li><a href="users">Users</a></li></ul>
+
+    <form  method="get" action="meals">
+        <select name="user">
+            <option selected value="1">1</option>
+            <option value="2">2</option>
+        </select>
+        <button type="submit">Meals</button>
+    </form>
+
 </body>
 </html>
